# StockTicker

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
bootstrap-environment/: bootstrap.sh
stockticker/: config.py
stockticker/clients/: IB_insync.py  IBapi.py  file_secrets.py
stockticker/clients/base/: notifications.py  secrets.py
tests/: test_config.py
tests/clients/: test_IBapi.py  test_file_secrets.py  test_secrets.py  test_stockexchange.py
